<resources>
    <string name="app_name">Learning</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password</string>
    <string name="enter_your_username_and_password">Enter your Username and Password</string>
    <string name="login">LOGIN</string>
    <string name="user_name">User Name</string>
    <string name="sajdkfhas">sajdkfhas</string>
    <string name="action_settings">Settings</string>
    <string name="search_donor">Search Donor</string>
    <string name="search">Search</string>
    <string name="add_donor">ADD DONOR</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group :</string>
    <string name="district">District :</string>
    <string name="enter_person_name">Enter Person Name</string>
    <string name="female">Female</string>
    <string name="gender">Gender :</string>
    <string name="male">Male</string>
    <string name="string_male" />
    <string name="name">Name :</string>
    <string name="phone_no">Phone No :</string>
    <string name="previous_experience">Previous Experience :</string>
    <string name="submit">SUBMIT</string>
    <string name="username">USERNAME</string>
    <string name="enter_your_password">Enter Your Password :</string>
    <string name="enter_your_user_name">Enter your User Name :</string>
    <string name="sign_in">SIGN IN</string>
    <string name="register_home">REGISTER</string>
    <string name="add_date">ADD DATE </string>
    <string name="settings">Settings</string>
    <string name="search_menu">Search</string>
    <string name="enter_your_password_forget">Enter Your Password :</string>
    <string name="enter_your_user_name_forget_password">Enter your User Name :</string>
    <string name="forget_password_header">FORGET PASSWORD</string>
    <string name="login_Home">Login</string>
    <string name="header_manifest">Welcome to Swapno</string>
    <string name="register_here">Register Here</string>
    <string name="SearchButton">Search</string>
    <string name="select_blood_group">Select Blood Group</string>
    <string name="select_division">Select Division</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string-array name="BloogGroupArray">
        <item>A(+)ve</item>
        <item>A(-)ve</item>
        <item>B(+)ve</item>
        <item>B(-)ve</item>
        <item>AB(+)ve</item>
        <item>AB(-)ve</item>
        <item>O(+)ve</item>
        <item>O(-)ve</item>

    </string-array>
    <string-array name="DistrictSelection">
        <item>Barishal</item>
        <item>Chittagong</item>
        <item>Dhaka</item>
        <item>Khulna</item>
        <item>Mymensingh</item>
        <item>Rajshahi</item>
        <item>Rangpur</item>
        <item>Shylet</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_username_here">Enter Username Here</string>
    <string name="submit_forgetPass">Submit</string>
    <string name="username_forgetPassword">Username</string>
    <string name="BloodGroupArray">A+</string>
</resources>
